--- a/demo2/celery-service-deployment.yaml
+++ b/demo2/celery-service-deployment.yaml
@@ -1,13 +1,20 @@
 apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
+  labels:
+    app: celery-service
   name: celery-service
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: celery-service
+  strategy:
+    type: RollingUpdate
   template:
+    metadata:
+      labels:
+        app: celery-service
     spec:
       containers:
       - image: vikasit/celery_service:1.0
@@ -23,3 +30,5 @@ spec:
         imagePullPolicy: Always
         name: init-redis
       restartPolicy: Always
+      terminationGracePeriodSeconds: 30
+
