--- a/demo2/redis-deployment.yaml
+++ b/demo2/redis-deployment.yaml
@@ -9,13 +9,19 @@ spec:
   selector:
     matchLabels:
       app: redis
+  strategy:
+    type: RollingUpdate
   template:
+    metadata:
+      labels:
+        app: redis
     spec:
       containers:
       - image: redis:latest
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         name: redis
         ports:
         - containerPort: 6379
           protocol: TCP
       restartPolicy: Always
+
