--- a/demo2/app-service.yaml
+++ b/demo2/app-service.yaml
@@ -1,10 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    cloud.google.com/load-balancer-type: "Internal"
   labels:
     service: app
   name: app
 spec:
+  type: LoadBalancer
   ports:
   - name: "4001"
     port: 4001
