secrets added to demo4

--- a/demo4/sts.yaml
+++ b/demo4/sts.yaml
@@ -66,6 +66,16 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: status.podIP
+          - name: BACKEND_USERNAME
+            valueFrom:
+              secretKeyRef:
+               name: test-secret
+               key: username
+          - name: BACKEND_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: test-secret
+                key: password
         readinessProbe:
           exec:
             command:
